--- a/src/main/resources/templates/article/articleupload.html
+++ b/src/main/resources/templates/article/articleupload.html
@@ -129,6 +129,9 @@
                                     aria-label="Default select example" name="articlethemeid">
                                 <option value="0">编程</option>
                                 <option value="1">求职招聘</option>
+                                <option value="2">动漫</option>
+                                <option value="3">游戏</option>
+                                <option value="4">文学</option>
                             </select>
                         </div>
                     </div>
