--- a/src/main/resources/templates/error/500.html
+++ b/src/main/resources/templates/error/500.html
@@ -68,11 +68,13 @@
 
 
                     <div class="card-body">
-                        <h5 class="card-title">500</h5>
+                        <h5 class="card-title">404</h5>
                         <p class="card-text">无法在服务器上找到您想访问的页面，您可以检查自己的输入是否正确</p>
                         <p class="card-text"><small class="text-muted">小山屋论坛</small></p>
-                        <a href="#" class="btn btn-primary">带我去登录页面</a>
-                        <a href="#" class="btn btn-primary">带我去首页</a>
+                        <a href="http://localhost:8080/login/tologin" class="btn btn-primary">
+                            <span class="bi-person"></span> 带我去登录页面</a>
+                        <a href="http://localhost:8080/ind/userindex" class="btn btn-primary">
+                            <span class="bi-house"></span> 带我去首页</a>
                     </div>
 
                 </div>
