--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -101,13 +101,34 @@
     <div id="subnav">
         <ul class="nav nav-pills">
             <li class="nav-item">
-                <a class="nav-link active" href="http://localhost:8080/ind/userindex">全部</a>
+                <a class="nav-link active" href="http://localhost:8080/ind/userindex">
+                    全部
+                </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " href="#">管理区</a>
+                <a class="nav-link " href="http://localhost:8080/article/totheme">
+                    <span class="bi-code"></span> 编程
+                </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " href="#">编程</a>
+                <a class="nav-link " href="http://localhost:8080/article/totheme?tid=1">
+                    <span class="bi-telegram"></span> 求职招聘
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link " href="http://localhost:8080/article/totheme?tid=2">
+                    <span class="bi-emoji-sunglasses"></span> 动漫
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link " href="http://localhost:8080/article/totheme?tid=3">
+                    <span class="bi-joystick"></span> 游戏
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link " href="http://localhost:8080/article/totheme?tid=4g">
+                    <span class="bi-pen"></span> 文学
+                </a>
             </li>
         </ul>
     </div>
@@ -119,13 +140,13 @@
                     <a class="nav-link active">默认</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">热门</a>
+                    <a class="nav-link" href="http://localhost:8080/article/defaulthot">热门</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="http://localhost:8080/article/defaultnew">最新</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">消灭零回复</a>
+                    <a class="nav-link" href="http://localhost:8080/article/defaultnore">消灭零回复</a>
                 </li>
             </ul>
 
