--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>404</title>
+    <title>小山屋论坛-404</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
     <!-- 新 Bootstrap5 核心 CSS 文件 -->
@@ -71,8 +71,10 @@
                             <h5 class="card-title">404</h5>
                             <p class="card-text">无法在服务器上找到您想访问的页面，您可以检查自己的输入是否正确</p>
                             <p class="card-text"><small class="text-muted">小山屋论坛</small></p>
-                            <a href="http://localhost:8080/login/tologin" class="btn btn-primary"><span class="bi-person"></span> 带我去登录页面</a>
-                            <a href="#" class="btn btn-primary"><span class="bi-house"></span> 带我去首页</a>
+                            <a href="http://localhost:8080/login/tologin" class="btn btn-primary">
+                                <span class="bi-person"></span> 带我去登录页面</a>
+                            <a href="http://localhost:8080/ind/userindex" class="btn btn-primary">
+                                <span class="bi-house"></span> 带我去首页</a>
                         </div>
 
                 </div>
